# Helium

./: CMakeLists.txt  README.md  build.sh  run.sh
include/: helium.hpp  io.hpp  lexer.hpp  macros.hpp  token.hpp
sources/: helium.cpp  io.cpp  lexer.cpp  main.cpp  token.cpp
tests/: lexer_test_1.hel  lexer_test_2.hel  lexer_test_3.hel
